[tool.poetry]
name = "fullstackgrimorium"
version = "0.1.0"
description = "The repository contains code and documents regarding best practices regarding Full Stack Development."
authors = ["Simone Porreca <porrecasimone@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
